* Documentation updates from Dave Mills.
* Include Linus Karlsson's GSoC 2010 testing code.
(4.2.7p74) 2010/10/29 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1685] from 4.2.6p3-RC8: NMEA driver mode byte confusion.
* from 4.2.6p3-RC8: First cut at using scripts/checkChangeLog.
* Documentation updates from Dave Mills.
(4.2.7p73) 2010/10/27 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1680] Fix alignment of clock_select() arrays.
* refinements to new startup behavior from David Mills.
* For the bootstrap script, touch .html files last.
* Add 'make check' test case that would have caught [Bug 1678].
(4.2.7p72) 2010/10/26 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1679] Fix test for -lsocket.
* Clean up missing ;; entries in configure.ac.
(4.2.7p71) 2010/10/25 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1676] from 4.2.6p3-RC7: NMEA: $GPGLL did not work after fix
  for Bug 1571.
* [Bug 1678] "restrict source" treated as "restrict default".
* from 4.2.6p3-RC7: Added scripts/checkChangeLog.
(4.2.7p70) 2010/10/24 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1571] from 4.2.6p3-RC6: NMEA does not relate data to PPS edge.
* [Bug 1572] from 4.2.p63-RC6: NMEA time adjustment for GPZDG buggy.
* [Bug 1675] from 4.2.6p3-RC6: Prohibit includefile remote config.
* Enable generating ntpd/ntp_keyword.h after keyword-gen.c changes on
  Windows as well as POSIX platforms.
* Fix from Dave Mills for a rare singularity in clock_combine().
(4.2.7p69) 2010/10/23 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1671] Automatic delay calibration is sometimes inaccurate.
(4.2.7p68) 2010/10/22 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1669] from 4.2.6p3-RC5: NTP fails to compile on IBM AIX 5.3.
* [Bug 1670] Fix peer->bias and broadcastdelay.
* Documentation updates from Dave Mills.
* Documentation EOL cleanup.
(4.2.7p67) 2010/10/21 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1649] from 4.2.6p3-RC5: Require NMEA checksum if $GPRMC or
  previously seen.