@@ -1,52 +1,0 @@
-check_PROGRAMS = tests
-
-sntp_src = $(top_builddir)/sntp
-
-sntp_SOURCES_USED =	$(sntp_src)/crypto.o		\
-			$(sntp_src)/kod_management.o	\
-			$(sntp_src)/log.o		\
-			$(sntp_src)/main.o		\
-			$(sntp_src)/networking.o	\
-			$(sntp_src)/sntp-opts.o		\
-			$(sntp_src)/utilities.o
-
-base_SOURCES =		../tests_main.cpp	\
-			sntptest.cpp
-
-tests_SOURCES = $(base_SOURCES)		\
-		crypto.cpp		\
-		keyFile.cpp		\
-		kodDatabase.cpp		\
-		kodFile.cpp		\
-		logFile.cpp		\
-		networking.cpp		\
-		packetHandling.cpp	\
-		packetProcessing.cpp	\
-		utilities.cpp
-
-LDADD = 	@GTEST_LDFLAGS@			\
-		@GTEST_LIBS@			\
-		$(LIBOPTS_LDADD)		\
-		@top_builddir@/libntp/libntp.a	\
-		@LCRYPTO@			\
-		$(sntp_SOURCES_USED)
-
-AM_CXXFLAGS = @GTEST_CXXFLAGS@
-AM_CPPFLAGS = @GTEST_CPPFLAGS@
-
-INCLUDES = $(LIBOPTS_CFLAGS) -I$(top_srcdir)/include -I$(top_srcdir)/lib/isc/include \
-	-I$(top_srcdir)/lib/isc/nothreads/include \
-	-I$(top_srcdir)/lib/isc/unix/include \
-	-I$(top_srcdir)/tests \
-	-I$(top_srcdir)/sntp
-
-TESTS = 
-
-TEST_INPUT_DIR = $(abs_srcdir)/data
-TEST_OUTPUT_DIR = $(abs_builddir)/data
-
-TESTS_ENVIRONMENT = $(top_srcdir)/tests/sntp/test-driver $(TEST_INPUT_DIR) $(TEST_OUTPUT_DIR)
-
-if !NTP_CROSSCOMPILE
-TESTS += $(check_PROGRAMS)
-endif
