@@ -1,3 +1,4 @@
+* Put the sntp tests under sntp/ .
 * Documentation updates from Dave Mills.
 * Include Linus Karlsson's GSoC 2010 testing code.
 (4.2.7p74) 2010/10/29 Released by Harlan Stenn <stenn@ntp.org>
